--- a/Gulf-futureWeb/WebSite/WebSiteControlPanal/ControlPanalMasterPage.Master
+++ b/Gulf-futureWeb/WebSite/WebSiteControlPanal/ControlPanalMasterPage.Master
@@ -5,6 +5,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>Admin Home Page</title>
+
+
+ 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <!-- Bootstrap -->
@@ -133,9 +136,10 @@
             </div>
         </div>
     </form>
-    <script src="vendors/jquery-1.9.1.min.js"></script>
+    <%--<script src="vendors/jquery-1.9.1.min.js"></script>--%>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="vendors/easypiechart/jquery.easy-pie-chart.js"></script>
     <script src="assets/scripts.js"></script>
+    <script src="~/Scripts/jquery-2.1.0.min.js"></script>
 </body>
 </html>
