--- a/Gulf-futureWeb/WebSite/WebSiteControlPanal/ControlPanalMasterPage.Master
+++ b/Gulf-futureWeb/WebSite/WebSiteControlPanal/ControlPanalMasterPage.Master
@@ -133,10 +133,11 @@
             </div>
         </div>
     </form>
+    <script src="../Scripts/jquery-2.1.0.min.js"></script>
     <%--<script src="vendors/jquery-1.9.1.min.js"></script>--%>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="vendors/easypiechart/jquery.easy-pie-chart.js"></script>
     <script src="assets/scripts.js"></script>
-    <script src="~/Scripts/jquery-2.1.0.min.js"></script>
+    
 </body>
 </html>
