Complete Best Deals

--- a/Gulf-futureWeb/WebSite/WebSiteControlPanal/ControlPanalMasterPage.Master
+++ b/Gulf-futureWeb/WebSite/WebSiteControlPanal/ControlPanalMasterPage.Master
@@ -76,7 +76,7 @@
                                         </li>
                                         <li class="divider"></li>
                                         <li>
-                                            <a href="#">Default Languge</a>
+                                            <a href="DefualtLanguge.aspx">Default Languge</a>
                                         </li>
                                         
                                     </ul>
